lightning-lab-1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: logger
  name: logger
spec:
  containers:
  - image: nginx:alpine
    name: logger
    resources: {}
    volumeMounts:
      - name: data
        mountPath: /var/www/nginx
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: log-claim
