lightning-lab-1/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:alpine
        name: redis
        resources: 
          requests:
            cpu: 200m
        volumeMounts:
          - name: data
            mountPath: /redis-master-data
          - name: redis-config
            mountPath: /redis-master
            
        ports:
          - containerPort: 6379
      volumes:
        - name:  data
          emptyDir: {}
        - name: redis-config
          configMap:
            name: redis-config
